style.css
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

body {
    max-height: 100vh;
    font-family: "Montserrat", sans-serif;
    background-color: #f1e9da;
    color: #041f4a;
}

a {
    text-decoration: none;
    color: inherit;
    text-align: center;
}

a:hover,
#cv:hover {
    color: #c70000;
}

#cv {
    cursor: pointer;
}

#container {
    height: 100vh;
    display: grid;
    grid-template-columns: 150px 1fr 1fr;
    grid-template-rows: 1fr 1fr 4fr;
    grid-template-areas: "pic name project-container" "welcome welcome project-container" "about-me about-me project-container";
}

/*__BANNER__*/

.pic {
    grid-area: pic;
    margin: 1%;
    display: flex;

    align-items: center;
}

.self {
    margin: 1%;
    object-fit: cover;
}

.self img {
    border: 5px solid #041f4a;
    height: 150px;
    border-radius: 20px;
}

.name {
    grid-area: name;
    margin: 1%;
    display: flex;
    justify-content: center;
    align-items: center;

    font-size: 2rem;
    font-weight: bold;

    background-image: linear-gradient(90deg, #f1e9da, #939a9d);
    border-radius: 30px;

    color: #c70000;
}

/*__WELCOME MESSAGE__*/

.welcome {
    grid-area: welcome;
    display: flex;
    flex-direction: row;
    margin: 0 1%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    font-size: 2rem;
    font-weight: bold;
}

.text {
    height: 100%;
    width: 2fr;
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-align: center;
}

.choice {
    height: 100%;
    width: 1fr;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
}

.lang,
.theme {
    height: 100%;
    width: 1fr;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
}

button {
    font-family: inherit;
    font-size: 1rem;
    padding: 5px;
    border: 2px solid #041f4a;
    background-color: #f1e9da;
    border-radius: 20px;
}

#theme {
    color: #f1e9da;
    background-color: #041f4a;
}

#theme:hover,
#theme:focus {
    background-color: #939a9d;
}

button:hover {
    background-color: #939a9d;
}

#de {
    margin: 0 10px;
}

/*__INFO BOX__*/

.about-me {
    grid-area: about-me;
    margin: 1%;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    text-align: center;
    padding: 2%;
    border: 5px solid #041f4a;
    border-radius: 30px;
    font-size: 1.25rem;
}

.contact-me {
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
}

em {
    color: #939a9d;
    font-size: 1rem;
}

/*__PROJECTS__*/

.project-container {
    grid-area: project-container;
    margin: 1%;

    font-size: 2rem;
    background-image: linear-gradient(#f1e9da, #939a9d);
    border-radius: 30px;

    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: 1fr 5fr;
    gap: 2% 2%;
    grid-template-areas: "projects-header projects-header" "projects projects";
    grid-area: project-container;
}

.projects-header {
    grid-area: projects-header;
    display: flex;
    justify-content: center;
    text-align: center;
    align-items: center;
    font-weight: bold;
}

.project-name {
    font-size: 1.5rem;
    padding-top: 1%;
}

.projects {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: repeat(3, 1fr);
    gap: 10px 1px;
    grid-template-areas: "project1 project2" "project3 project4" "project5 project6";
    grid-area: projects;

    object-fit: cover;
}

.project-image {
    width: 22vh;
    height: 22vh;
    border: 5px solid #041f4a;
    border-radius: 20px;
    padding: 1%;
}

.projects p {
    margin-top: 2%;
}

.project1 {
    grid-area: project1;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.project2 {
    grid-area: project2;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.project3 {
    grid-area: project3;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.project4 {
    grid-area: project4;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.project5 {
    grid-area: project5;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.project6 {
    grid-area: project6;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

/*__MODAL__*/

.modal-container {
    visibility: hidden;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: rgba(4, 31, 74, 0.35);
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
}

.vis {
    visibility: visible;
    z-index: +1;
}

.cv-modal {
    display: flex;
    flex-direction: column;
    background-color: #f1e9da;
    height: 90vh;
    width: 80%;
    border-radius: 20px;
    align-items: center;
    justify-content: left;
    padding: 20px;
    font-size: 2rem;
}

#modal-x {
    display: flex;
    flex-direction: row-reverse;
    align-items: flex-end;
    text-align: right;
    width: 100%;
}

#X {
    color: #c70000;
    cursor: pointer;
    font-size: 2rem;
    font-weight: bold;
    padding-right: 10px;
}

#X:hover {
    color: #fb8b24;
}

.modal-text {
    width: 100%;
    overflow-y: scroll;
}

.modal-text a {
    font-size: 1rem;
    padding: 0;
}

.cv-text {
    font-size: 1.25rem;
}

h4 {
    font-size: 1.5rem;
    text-align: center;
    color: #c70000;
}

li {
    margin: 1% 0 1% 2%;
}

h5 {
    font-size: 1.25rem;
    color: #c70000;
    margin: 2% 0 1% 0;
}

.print h4 {
    margin-top: 2%;
}

.print a {
    font-size: 1.25rem;
}

.print a:hover {
    color: #fb8b24;
}

@media screen and (max-width: 415px) {
    body {
        height: auto;
    }

    #container {
        grid-template-columns: 75px 1fr;
        grid-template-rows: 1fr 1fr 1fr 1fr;

        grid-template-areas: "pic name" "welcome welcome" "about-me about-me" "project-container project-container";
    }

    .self img {
        height: 75px;
        border-width: 2px;
    }

    .name,
    .welcome,
    .projects-header {
        font-size: 1.5rem;
    }

    button {
        font-size: 0.75rem;
        padding: 2px;
    }

    .about-me,
    .project-name {
        font-size: 1rem;
        border-width: 2px;
    }

    .project-name {
        padding-bottom: 5px;
    }

    em {
        font-size: 0.5rem;
    }

    .project-container {
        background-image: none;
        padding-bottom: 10px;
    }

    .project-image {
        border-width: 2px;
        height: 60px;
        width: 60px;
    }

    #X {
        font-size: 1rem;
        padding: 0 5px 5px 0;
    }
}

